--- a/static/index.html
+++ b/static/index.html
@@ -7,6 +7,15 @@
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
   </head>
 
+  <style>
+    body{
+      margin: 0px;
+      padding: 0px;
+      font-family: 'Roboto', sans-serif;
+      font-size: .9em;
+    }
+  </style>
+
   <body>
     <div id="app"></div>
   </body>
